[package]
name = "rx-skeleton-rust"
version = "0.1.0"
authors = ["thegwan <gwan.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.56.0" 
cc = "1.0.66"

[dependencies]
ctrlc = { version = "3.1.7", features = ["termination"] }

[features]
mlx5 = []
default = ["mlx5"]

