[package]
name = "count-pcap"
version = "0.1.0"
authors = ["thegwan <gwan.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.7", features = ["termination"] }
pcap = "0.8.1"

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized'}